--- a/styles.css
+++ b/styles.css
@@ -44,9 +44,13 @@ a {
     border-radius: 5px;
     transition: background-color 0.3s;
 }
-a:hover {
-    background-color: #2980b9;
-}
+    a.aktuell {
+        background-color: #808080;
+        cursor: default;
+    }
+    a.aktuell:hover {
+        background-color: #808080;
+    }
 img {
     max-width: 100%;
     height: auto;
