--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ a {
     margin: 5px;
     border-radius: 5px;
     transition: background-color 0.3s;
+	
 }
     a.aktuell {
         background-color: #808080;
@@ -51,9 +52,20 @@ a {
     a.aktuell:hover {
         background-color: #808080;
     }
+	
+	
 img {
     max-width: 100%;
     height: auto;
     border-radius: 5px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 }
+
+        div.fixed-div {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: #f9f9f9;
+            z-index: 9999;
+        }
